# magisterka

./: .gitignore  benchamrk.py  benchmark_wip.py  run_model.sh  submit.sh
dataset_creation/: benchmark.py  caches_to_tmpdir.sh  dataset_clone_index_counts.py  dataset_create.py  prepare_prompts.py  prompts.pickle  pyproject.toml  run_model.sh  submit.sh
dataset_creation/dataset_creation/: prompts.pickle
dataset_creation/notebooks/: dataset_create.ipynb  dataset_exploration.ipynb
dataset_creation/prompts/: 1  2  3  4  5  6  7  description
results/: get_result.py  main.py  pyproject.toml  results.ipynb  results_exploration.ipynb
results/pickles/: GPT-OSS-20B.pickle  Qwen3-Coder-Next.pickle  Qwen3.5-122B-A10B.pickle
