[project]
name = "dataset-creation"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "accelerate>=1.13.0",
    "ipykernel>=7.2.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.9",
    "openai>=2.38.0",
    "pandas>=3.0.3",
    "pyzmq>=27.1.0",
    "seaborn>=0.13.2",
    "sentencepiece>=0.2.1",
    "torch>=2.11.0",
    "transformers>=5.9.0",
    "vllm>=0.21.0",
]
