[project]
name = "results"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.2.0",
    "matplotlib>=3.10.9",
    "pandas>=3.0.3",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.5.1",
    "tqdm>=4.67.3",
    "tqdn>=0.2.1",
]
